@@ -1,3 +1,9 @@
+2013-10-09  Sergio Durigan Junior  <sergiodj@redhat.com>
+
+	PR sim/16018:
+	* float.c (set_fsr): Add missing "break" statements.  Reindent
+	code.
+
 2013-09-23  Alan Modra  <amodra@gmail.com>
 
 	* configure: Regenerate.
